--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature/*", "release/*", "bugfix/*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "feature/*", "release/*", "bugfix/*" ]
 
 jobs:
   build:
